Fixed layout alignment on landing page

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,20 @@
    color: #fff;
 }
 
+.more {
+    display: flex;
+    width: 100%;
+    
+
+
+}
+
+
+
+
+
+
+
 /* CSS style to put images in Movers div side by side */
 
 .moverImages {
